# Logsnatch

./: .gitignore  README.md  SKILL.md  pyproject.toml
evals/: evals.json
logminer/: cli.py
logsnatch/: __main__.py  cli.py
logsnatch/parsers/: __init__.py  base.py  claude.py  opencode.py  qwen.py
logsnatch/pipeline/: __init__.py  cleanup.py  evaluate.py
logsnatch/redaction/: __init__.py  anonymizer.py  secrets.py
tests/: test_cli.py  test_parsers.py  test_pipeline.py  test_redaction.py
