[project]
name = "logsnatch"
version = "0.1.0"
description = "CLI to parse, redact, clean, score, and filter coding-agent logs (Claude Code, OpenCode, Qwen)"
readme = "README.md"
authors = [{ name = "kpearson", email = "kyle.pearson@gd-ms.com" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
# Core CLI (parsers, pipeline, redaction) uses only the Python stdlib.
dependencies = []

[project.optional-dependencies]
# `validate` subcommand needs a tokenizer.
validate = ["transformers>=4.40"]
test = ["pytest"]

[project.scripts]
logsnatch = "logsnatch.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["logsnatch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]
